Add Docker setup
- Added Dockerfile
- Added docker-compose.yml
- Adjusted RAG configuration for Docker
- Added .env to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,12 @@ target/
 /nbbuild/
 /dist/
 /nbdist/
-/.nb-gradle/
-build/
+.build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
+
+# Environment file
+.env
