--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.ecommerce</groupId>
+    <groupId>com.ai</groupId>
     <artifactId>contract-analysis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>contract-analysis</name>
